--- a/css/cpp.css
+++ b/css/cpp.css
@@ -58,3 +58,23 @@ table.cifratura td {
 .codice {
 	margin: 5px;
 }
+
+#bottoneTop {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: rgb(73, 70, 70);
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 4px;
+  }
+  
+  #bottoneTop:hover {
+	background-color: #555;
+  }
