--- a/css/cpp.css
+++ b/css/cpp.css
@@ -89,3 +89,16 @@ table.cifratura td {
   #bottoneTop:hover {
 	background-color: #555;
   }
+  
+  .button {
+	background-color: #5C5C5C
+	border: none;
+	color: white;
+	padding: 5px 8px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+  }
