--- a/css/cpp.css
+++ b/css/cpp.css
@@ -91,7 +91,7 @@ table.cifratura td {
   }
   
   .button {
-	background-color: #5C5C5C
+	background-color: #5C5C5C;
 	border: none;
 	color: white;
 	padding: 5px 8px;
