--- a/css/cpp.css
+++ b/css/cpp.css
@@ -60,14 +60,60 @@ table.cifratura td {
 }
 
 
-.bottoneSpoiler{
-	width:100px;
-	font-size:12px;
-	margin-left:10px;
-	margin-bottom:3px;
-	padding:0px;
-}
+#bottoneTop {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: rgb(73, 70, 70);
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 4px;
+  }
+  
+  #bottoneTop:hover {
+	background-color: #555;
+  }
 
+
+  .button {
+	background-color: #5C5C5C;
+	border: none;
+	color: white;
+	padding: 5px 8px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 4px;
+  }
+
+
+
+
+  @media only screen and (max-width: 768px) {
+	/* For mobile phones: */
+		
+	.button {
+		background-color: #5C5C5C;
+		border: none;
+		color: white;
+		padding: 30px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		margin: 4px 2px;
+		cursor: pointer;
+		border-radius: 4px;
+	  }
 
 
 #bottoneTop {
@@ -89,16 +135,5 @@ table.cifratura td {
   #bottoneTop:hover {
 	background-color: #555;
   }
-  
-  .button {
-	background-color: #5C5C5C;
-	border: none;
-	color: white;
-	padding: 5px 8px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
+
   }
