--- a/css/cpp.css
+++ b/css/cpp.css
@@ -72,7 +72,7 @@ table.cifratura td {
 	background-color: rgb(73, 70, 70);
 	color: white;
 	cursor: pointer;
-	padding: 15px;
+	padding: 12px;
 	border-radius: 4px;
   }
   
@@ -81,11 +81,11 @@ table.cifratura td {
   }
 
 
-  .button {
+  .bottoneMenu {
 	background-color: #5C5C5C;
 	border: none;
 	color: white;
-	padding: 5px 8px;
+	padding: 8px 14px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -93,47 +93,4 @@ table.cifratura td {
 	margin: 4px 2px;
 	cursor: pointer;
 	border-radius: 4px;
-  }
-
-
-
-
-  @media only screen and (max-width: 768px) {
-	/* For mobile phones: */
-		
-	.button {
-		background-color: #5C5C5C;
-		border: none;
-		color: white;
-		padding: 30px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 16px;
-		margin: 4px 2px;
-		cursor: pointer;
-		border-radius: 4px;
-	  }
-
-
-#bottoneTop {
-	display: none;
-	position: fixed;
-	bottom: 20px;
-	right: 30px;
-	z-index: 99;
-	font-size: 18px;
-	border: none;
-	outline: none;
-	background-color: rgb(73, 70, 70);
-	color: white;
-	cursor: pointer;
-	padding: 30px;
-	border-radius: 4px;
-  }
-  
-  #bottoneTop:hover {
-	background-color: #555;
-  }
-
   }
