--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ a:hover {
   user-select: none;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .js .nav-collapse {
     position: relative;
   }
@@ -144,7 +144,7 @@ header {
   opacity: 1;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .mask {
     display: none !important;
     opacity: 0 !important;
@@ -177,7 +177,7 @@ header {
   float: left;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .nav-collapse {
     float: right;
     width: auto;
@@ -189,7 +189,7 @@ header {
   width: 100%;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .nav-collapse li {
     width: auto;
   }
@@ -211,7 +211,7 @@ header {
   background: #5C5C5C;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .nav-collapse a {
     border-left: 1px solid white;
     padding: 1.02em 2em;
@@ -227,7 +227,7 @@ header {
   padding-left: 2em;
 }
 
-@media screen and (min-width: 82em) {
+@media screen and (min-width: 91em) {
   .nav-collapse ul ul a {
     display: none;
   }
@@ -269,7 +269,7 @@ header {
   position: absolute;
   content: "\2261"; /* Hamburger icon */
   text-indent: 0;
-  speak: none;
+  speak-as: none;
   width: 100%;
   left: 0;
   top: 0;
